fix font-size Collapse-description

--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -38,7 +38,7 @@
         height: auto;
         padding: 10px;
         letter-spacing: 1px;
-        font-size: clamp(12px, 2vw, 16px);
+        font-size: 12px;
         color: $color-secondary;
         transition: visibility 0.5s ease-in-out,
                     opacity 0.5s ease-in-out,
